--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -12,6 +12,9 @@ cite {
 #external-links ul {
   list-style-type: none;
   padding-left: 0px;
+  width: 200px;
+  display: inline-block;
+  vertical-align: left;
 }
 
 /* you're welcome to edit the
@@ -32,4 +35,9 @@ figcaption {
 }
 body {
 	width:960px;
+}
+main {
+	width:756px;
+	display: inline-block;
+	vertical-align: right;
 }
