--- a/web_dev/sinatra_templating/views/new_student.erb
+++ b/web_dev/sinatra_templating/views/new_student.erb
@@ -4,7 +4,7 @@
   <title>Create a New Student</title>
 </head>
 <body>
-  <form action="/students" method="POST">
+  <form action="/students" method="POST"> <!-- POST is preferred request type for new data. notice /students here and in .rb -->
     <input type="text" name="name" placeholder="Name">
     <input type="text" name="campus" placeholder="Campus">
     <input type="text" name="age" placeholder="Age">
